--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,10 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+		<dependency> <groupId>org.springframework.data</groupId> 
+		<artifactId>spring-data-rest-webmvc</artifactId> 
+		<version>2.5.3.RELEASE</version> 
+		</dependency>
 		
 		<dependency>
 		<groupId>com.h2database</groupId>
